Added transition to ControlActivity. BluetoothDevice is passed as message. Tested OK. Created a Service intended to manage Bluetooth communication with robot server.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="mobile_autonomous_robot.robotleash" >
-    <uses-permission android:name="android.permission.BLUETOOTH" />
 
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <application
         android:allowBackup="true"
@@ -22,6 +23,13 @@
             android:name=".ControlActivity"
             android:label="@string/title_activity_control" >
         </activity>
+
+        <service
+            android:name=".BluetoothConnectionClient"
+            android:enabled="true"
+            android:exported="true"
+            >
+        </service>
     </application>
 
 </manifest>
