Reorganized project files. The size of this project will increase as OpenGL functionality is added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         </activity>
 
         <service
-            android:name=".BluetoothConnectionClient"
+            android:name=".bluetooth.BluetoothConnectionClient"
             android:enabled="true"
             android:exported="true"
             >
