Commit to stay synced.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         </activity>
         <activity
             android:name=".ControlActivity"
-            android:label="@string/title_activity_control" >
+            android:label="@string/title_activity_control"
+            android:screenOrientation="locked">
         </activity>
 
         <service
